media queries bugs squashed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ p {
 #header {
 	width: 100vw;
 	background: #fff;
-	border-bottom: 1 px solid ;
 	height: 80px;
 	position: fixed;
 	z-index:100;
@@ -166,7 +165,7 @@ li{ margin-top: 9px; float: left; padding-left: 21px }
 
 #about-me {
 	text-align: center;
-	margin-bottom: 20px;
+	margin: 20px 0;
 	display: block;
 	font-size: 30px;
 	font-weight: 800;
@@ -202,12 +201,12 @@ li{ margin-top: 9px; float: left; padding-left: 21px }
 
 #slide3{
 	color: #010440;
-	padding: 130px 20px 20px 20px;
+	padding: 130px 15px 60px 15px;
 }
 
-#quality {
+#project {
 	text-align: center;
-	margin-bottom: 20px;
+	margin: 20px 0;
 	display: block;
 	font-size: 30px;
 	font-weight: 800;
@@ -257,7 +256,7 @@ li{ margin-top: 9px; float: left; padding-left: 21px }
 
 #contact {
 	text-align: center;
-	margin-bottom: 20px;
+	margin: 20px 0;
 	display: block;
 	font-size: 30px;
 	font-weight: 800;
@@ -269,7 +268,7 @@ li{ margin-top: 9px; float: left; padding-left: 21px }
 	margin-bottom: 150px;
 }
 
-#chat {
+#chat-hr {
 	width: 100px;
 }
 
@@ -310,6 +309,7 @@ textarea.form-control {
 
 #skills {
 	text-align: center;
+	margin-top: 20px;
 	margin-bottom: 20px;
 	display: block;
 	font-size: 30px;
@@ -398,16 +398,6 @@ textarea.form-control {
 	 * Header
 	/* ---------------------------------------------- */
 
-	#header {
-		width: 100%;
-		background: #fff;
-		border-bottom: 1 px solid ;
-		height: 80px;
-		position: fixed;
-		z-index:100;
-		border-bottom: 1px solid #f5f5f5;
-	}
-
 	#logo1 {
 		font-size: 1em;
 		text-align: center;
@@ -416,7 +406,7 @@ textarea.form-control {
 
 	#logo, #navbar { height: 100% }
 	#logo { padding: 0 0 0 50px; display: flex; justify-content: flex-start; align-items: center }
-	#navbar { padding: 5px 50px 10px 0; display: flex; justify-content: flex-end; align-items: center }
+	#navbar { padding: 5px 50px 5px 0; display: flex; justify-content: flex-end; align-items: center }
 	#logo a { color: #010440; text-decoration: none; font-size: 30px }
 
 	ul { list-style: none; padding-left: 0 }
@@ -503,7 +493,7 @@ textarea.form-control {
 
 	#slide3{
 		color: #010440;
-		padding-top: 90px;
+		padding: 80px 0;
 		background-size: cover;
 	}
 
@@ -513,7 +503,7 @@ textarea.form-control {
 		margin-bottom: -3px;
 	}
 
-	#quality {
+	#project {
 		text-align: center;
 		margin-top: 20px;
 		margin-bottom: 20px;
@@ -524,10 +514,6 @@ textarea.form-control {
 		letter-spacing: 5px;
 	}
 
-	#quality-initial {
-		font-family: 'Monoton', cursive;
-		color: #FF530D;
-	}
 	#portfolio-cards {
 		padding: 0;
 		margin-right: 50px;
@@ -568,8 +554,9 @@ textarea.form-control {
 		letter-spacing: 5px;
 	}
 
-	#chat {
+	#chat-hr {
 		width: 100px;
+		margin-bottom: 15px;
 	}
 	/* ---------------------------------------------- /*
 	 * Footer
@@ -578,13 +565,14 @@ textarea.form-control {
 	#slide5{
 		color: #FF530D;
 		background: #010440;
-		padding: 130px 0 0 0;
+		padding: 80px 0;
 		background-size: cover;
 		margin-bottom: 0;
 	}
 
 	#skills {
 		text-align: center;
+		margin-top: 20px;
 		margin-bottom: 20px;
 		display: block;
 		font-size: 30px;
@@ -669,16 +657,6 @@ textarea.form-control {
 	 * Header
 	/* ---------------------------------------------- */
 
-	#header {
-		width: 100%;
-		background: #fff;
-		border-bottom: 1 px solid ;
-		height: 80px;
-		position: fixed;
-		z-index:100;
-		border-bottom: 1px solid #f5f5f5;
-	}
-
 	#logo1 {
 		font-size: .8em;
 		text-align: center;
@@ -686,8 +664,8 @@ textarea.form-control {
 	}
 
 	#logo, #navbar { height: 100% }
-	#logo { padding: 0 0 0 40px; display: flex; justify-content: flex-start; align-items: center }
-	#navbar { padding: 5px 40px 10px 0; display: flex; justify-content: flex-end; align-items: center }
+	#logo { padding: 0 0 0 1px; margin-left: 40px; margin-right: -80px; display: flex; justify-content: flex-start; align-items: center }
+	#navbar { padding: 13px 1px 10px 0; display: flex; justify-content: flex-end; align-items: center }
 	#logo a { color: #010440; text-decoration: none; font-size: 22px }
 
 	ul { list-style: none; padding-left: 0 }
@@ -741,7 +719,6 @@ textarea.form-control {
 	
 	#about-me {
 		text-align: center;
-		margin-bottom: 20px;
 		display: block;
 		font-size: 30px;
 		font-weight: 800;
@@ -775,14 +752,14 @@ textarea.form-control {
 	#slide3{
 		background-color: #fff;
 		color: #010440;
-		padding: 120px 0 20px 0;
+		padding: 100px 0;
 		background-size: cover;
 	}
 	
-	#quality {
+	#project {
 		font-size: 2em;
+		margin-top: 20px;
 		text-align: center;
-		margin-bottom: 20px;
 		margin-top: 0;	
 	}
 
@@ -817,7 +794,6 @@ textarea.form-control {
 	
 	#contact {
 		text-align: center;
-		margin-bottom: 20px;
 		display: block;
 		font-size: 2em;
 		font-weight: 800;
@@ -825,7 +801,7 @@ textarea.form-control {
 		letter-spacing: 5px;
 	}
 
-	#chat {
+	#chat-hr {
 		width: 100px;
 	}
 
@@ -840,14 +816,13 @@ textarea.form-control {
 	#slide5{
 		color: #FF530D;
 		background: #010440;
-		padding: 130px 0 0 0;
+		padding: 100px 0;
 		background-size: cover;
 		margin-bottom: 0;
 	}
 
 	#skills {
 		text-align: center;
-		margin-bottom: 20px;
 		display: block;
 		font-size: 30px;
 		font-weight: 800;
@@ -930,15 +905,6 @@ textarea.form-control {
 	 * Header
 	/* ---------------------------------------------- */
 
-	#header {
-		width: 100%;
-		background: #fff;
-		border-bottom: 1 px solid ;
-		height: 130px;
-		position: fixed;
-		z-index:100;
-	}
-	
 	#intro {
 		margin-bottom: 100px;
 	}
@@ -954,7 +920,7 @@ textarea.form-control {
 	}
 
 	#logo, #navbar { height: 50%; padding: 0; display: flex; justify-content: center; align-items: center }
-	#logo { width: 100%; padding-top: 5px }
+	#logo { width: 100%; padding-top: 5px; margin-left: 0; margin-right: 0 }
 	#navbar { padding-bottom: 10px; width: 100%; background: #fff; border-bottom: 1px solid #f5f5f5 }
 	#logo a { color: #010440; text-decoration: none; font-size: 26px }
 	
@@ -1043,7 +1009,7 @@ textarea.form-control {
 		background-size: cover;
 	}
 	
-	#quality {
+	#project {
 		text-align: center;
 		margin-bottom: 20px;
 	}
